Latest By Nov-05 Afternoon
Login Main Page,
Hospital Admin Main Page,
Receptionist Home Page,
Add patient by receptionist

--- a/COMP231Project/AndroidManifest.xml
+++ b/COMP231Project/AndroidManifest.xml
@@ -65,6 +65,22 @@
             android:name="com.example.ezhealth.Receptionist"
             android:label="@string/title_activity_receptionist" >
         </activity>
+        <activity
+            android:name="com.example.ezhealth.ReceptionistPatientSearch"
+            android:label="@string/title_activity_receptionist_patient_search" >
+        </activity>
+        <activity
+            android:name="com.example.ezhealth.ReceptionistDoctorSearch"
+            android:label="@string/title_activity_receptionist_doctor_search" >
+        </activity>
+        <activity
+            android:name="com.example.ezhealth.ReceptionistPatientProfileView"
+            android:label="@string/title_activity_receptionist_patient_profile_view" >
+        </activity>
+        <activity
+            android:name="com.example.ezhealth.ReceptionistDoctorProfileView"
+            android:label="@string/title_activity_receptionist_doctor_profile_view" >
+        </activity>
     </application>
 
 </manifest>
