I finished patient home page and receptionistviewdoctor activities.
So, I completed 2 stories for  patient can view his profile and
receptionist can view all doctors.

--- a/COMP231Project/AndroidManifest.xml
+++ b/COMP231Project/AndroidManifest.xml
@@ -137,6 +137,14 @@
             android:name="com.example.ezhealth.Receptionistdb"
             android:label="@string/title_activity_receptionistdb" >
         </activity>
+        <activity
+            android:name="com.example.ezhealth.ReceptionistViewAllDoctor"
+            android:label="@string/title_activity_receptionist_view_all_doctor" >
+        </activity>
+        <activity
+            android:name="com.example.ezhealth.PatientHomepage"
+            android:label="@string/title_activity_patient_homepage" >
+        </activity>
     </application>
 
 </manifest>
