--- a/COMP231Project/AndroidManifest.xml
+++ b/COMP231Project/AndroidManifest.xml
@@ -138,12 +138,16 @@
             android:label="@string/title_activity_receptionistdb" >
         </activity>
         <activity
-            android:name="com.example.ezhealth.ReceptionistViewAllDoctor"
-            android:label="@string/title_activity_receptionist_view_all_doctor" >
+            android:name="com.example.ezhealth.AddLab"
+            android:label="@string/title_activity_add_lab" >
         </activity>
         <activity
-            android:name="com.example.ezhealth.PatientHomepage"
-            android:label="@string/title_activity_patient_homepage" >
+            android:name="com.example.ezhealth.LabAccount"
+            android:label="@string/title_activity_lab_account" >
+        </activity>
+        <activity
+            android:name="com.example.ezhealth.Lab"
+            android:label="@string/title_activity_lab" >
         </activity>
     </application>
 
