Doctor is able to write prescription
1. doctor home page modified
2. doctor can keep record of Appointment and prescriptions.
3. Buttons added.

--- a/COMP231Project/AndroidManifest.xml
+++ b/COMP231Project/AndroidManifest.xml
@@ -161,6 +161,18 @@
             android:name="com.example.ezhealth.CalView"
             android:label="@string/title_activity_cal_view" >
         </activity>
+        <activity
+            android:name="com.example.ezhealth.DoctorLoginBtn"
+            android:label="@string/title_activity_doctor_login_btn" >
+        </activity>
+        <activity
+            android:name="com.example.ezhealth.PatientVisitDoctorOnAppointment"
+            android:label="@string/title_activity_patient_visit_doctor_on_appointment" >
+        </activity>
+        <activity
+            android:name="com.example.ezhealth.PatientProfile"
+            android:label="@string/title_activity_patient_profile" >
+        </activity>
     </application>
 
 </manifest>
